# local-sidekick

./: .gcloudignore  .gitignore  LICENSE  PROGRESS.md  README.ja.md  README.md  poc-plan.md  requirements.md  review-alignment-fixes.md  review-download-models.md  review-experiment3.md  review-experiments-1-2.md  review-foundation-setup.md  review-shared-modules.md
.github/workflows/: build-desktop.yml
client/: .gitignore  electron-builder.json  electron.vite.config.ts  index.html  package-lock.json  package.json  tailwind.config.ts  tsconfig.node.json
client/electron/: avatar-window.ts  main.ts  preload.ts  (+4 more)
docs/: architecture.md  avatar-poc-plan.md  manual-testing.md  plan-5min-bucket-backend.md  plan-report-gcp-integration.md  poc-plan.md  requirements.md  unified-estimation-plan.md
engine/: pyproject.toml
engine/engine/: config.py  main.py
engine/engine/api/: cloud_client.py  models.py  routes.py  websocket.py
engine/engine/camera/: capture.py  features.py
engine/engine/estimation/: integrator.py  llm_backend.py  prompts.py  rule_classifier.py
engine/engine/history/: aggregator.py  store.py
engine/engine/notification/: engine.py
engine/models/: download.py
engine/tests/: test_bucketed_segments.py  test_cloud_report_endpoints.py  test_daily_stats.py  test_frame_brightness.py  test_integration_skip.py  test_integrator.py  test_notification_engine.py  test_unified_prompts.py  test_unified_rule_classifier.py
poc/: PROGRESS.md  README.ja.md  README.md  download_models.py  pyproject.toml  手動テスト結果.md
poc/docs/: backend-selection-report.md
poc/experiment1_embedded/: __init__.py  run_text_llama_cpp.py  run_text_mlx.py  run_vision_llama_cpp.py  run_vision_mlx.py
poc/experiment2_lmstudio/: __init__.py  run_text_lmstudio.py  run_vision_lmstudio.py
poc/experiment3_pcusage/: __init__.py  monitor.py  run_analysis.py
poc/shared/: __init__.py  camera.py  features.py  metrics.py  model_config.py  prompts.py  results.py  rule_classifier.py
scripts/: build-engine.sh
server/: Dockerfile  Dockerfile.firestore-emulator  docker-compose.vertex.yml  docker-compose.yml  pyproject.toml
server/deploy/: cloudbuild.yaml
server/server/: auth.py  deps.py  main.py
server/server/api/: reports.py  settings.py  statistics.py
server/server/models/: schemas.py
server/server/services/: firestore_client.py  vertex_ai.py
server/tests/: conftest.py  test_list_reports.py
tools/: mock_engine.py
(+29 files in other folders)
