[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "local-sidekick-server"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn>=0.34",
    "python-jose[cryptography]>=3.3",
    "passlib[bcrypt]>=1.7",
    "google-cloud-firestore>=2.19",
    "google-cloud-aiplatform>=1.74",
    "pydantic>=2.0",
]
